--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -14,6 +14,10 @@
 
 {% block organization %}Web Almanac por HTTP Archive{% endblock %}
 
+{% block mission %}
+Nuestra misión es combinar las estadísticas y tendencias sin procesar del HTTP Archive con la experiencia de la comunidad web. Web Almanac es un informe exhaustivo sobre el estado de la web, respaldado por datos reales y expertos web de confianza. Se compone de 20 capítulos que abarcan aspectos del contenido de la página, la experiencia del usuario, la publicación y la distribución.
+{% endblock %}
+
 {% block http_archive_link %}Página de Inicio HTTP Archive{% endblock %}
 
 {% block page_navigation %}Navegación de página{% endblock %}
@@ -46,6 +50,16 @@
 {% block open %}Abre{% endblock %}
 {% block close %}Cierra{% endblock %}
 
+{% block written_by_before %}Escrito por{% endblock %}
+{% block reviewed_by_before %}Revisado por{% endblock %}
+{% block translated_by_before %}Traducido por{% endblock %}
+{% block written_by_after %}{% endblock %}
+{% block reviewed_by_after %}{% endblock %}
+{% block translated_by_after %}{% endblock %}
+
+{% block author %}Autor(a){% endblock %}
+{% block authors %}Autores{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} en Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} en GitHub{% endmacro %}
 {% macro website(authorName) %}{{authorName}} sitio web{% endmacro %}
@@ -55,6 +69,48 @@
 {% block footer_title %}Navegación de pie de página{% endblock %}
 {% block copyright %}© 2019 Web Almanac. Con licencia <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Declaración de accesibilidad{% endblock %}
+
+{% block contributors_description %}
+Web Almanac ha sido posible gracias al arduo trabajo de la comunidad web. {{ self.contributors() }} personas han ofrecido incontables horas en las fases de planificación, investigación, redacción y producción.
+{% endblock %}
+{% block contributors_link %}Ver los contribuidores{% endblock %}
+
+{% block methodology_stat_1_title %}Sitios Web Analizados{% endblock %}
+{% block methodology_stat_1 %}5,8M{% endblock %}
+{% block methodology_stat_2_title %}Información Procesada{% endblock %}
+{% block methodology_stat_2 %}20,9 TB{% endblock %}
+{% block methodology_description %}
+A menos que se indique lo contrario, las métricas en los 20 capítulos del Web Almanac provienen del conjunto de datos del HTTP Archive. HTTP Archive es un proyecto administrado por la comunidad que ha estado rastreando cómo se construye la web desde 2010. Utilizando WebPageTest y Lighthouse bajo el capó, se prueban metadatos de aproximadamente 6 millones de sitios web mensualmente y se incluyen en una base de datos pública de BigQuery para su análisis. El conjunto de datos de Julio de 2019 se utilizó como base para las métricas de Web Almanac. Para obtener más información, consulte la página de Metodología.
+{% endblock %}
+{% block methodology_link %}Conozca nuestra Metodología{% endblock %}
+
+{% block introduction %}Introducción{% endblock %}
+
+{% block foreword_title %}Prefacio{% endblock %}
+
+{% block foreword %}
+    <p>
+      La web abierta es una red de tecnologías increíblemente compleja y en evolución. Industrias y carreras enteras se crean en la web y dependen de su vibrante ecosistema para tener éxito. Tan importante como es la web, comprender cómo está funcionando ha sido sorprendentemente difícil de alcanzar. Desde 2010, la misión del proyecto HTTP Archive ha sido rastrear cómo se construye la web, y ha estado haciendo un trabajo increíble. Sin embargo, ha habido una brecha que ha sido especialmente difícil de cerrar: dar sentido a los datos que el proyecto de HTTP Archive ha estado recopilando y permitir a la comunidad comprender fácilmente el rendimiento de la web. Ahí es donde entra el Web Almanac.
+    </p>
+
+    <p>
+      La misión de Web Almanac es tomar el tesoro de ideas que de otro modo serían accesibles solo para intrépidos mineros de datos, y empaquetarlo de una manera que sea fácil de entender. Esto es posible con la ayuda de expertos de la industria que pueden dar sentido a los datos y decirnos lo que significan. Cada uno de los 20 capítulos en Web Almanac se enfoca en un aspecto específico de la web, y cada uno ha sido escrito y revisado por expertos en su campo. La fuerza del Web Almanac fluye directamente de la experiencia de las personas que lo escriben.
+    </p>
+
+    <p>
+      Muchos de los hallazgos en Web Almanac son dignos de celebración, pero también es un recordatorio importante del trabajo que aún se requiere para brindar experiencias de usuario de alta calidad. Los análisis basados en datos en cada capítulo son una forma de responsabilidad que todos compartimos para desarrollar una mejor web. No se trata de avergonzar a los que se están equivocando, sino de iluminar el camino de las mejores prácticas para que haya una manera clara y correcta de hacer las cosas. Con la ayuda continua de la comunidad web, esperamos hacer de esto una tradición anual, para que cada año podamos seguir nuestro progreso y hacer correcciones de cursos según sea necesario.
+    </p>
+
+    <p>
+      Hay mucho que aprender en este informe, así que comience a explorar y comparta sus conclusiones con la comunidad para que podamos avanzar colectivamente en nuestra comprensión del estado de la web.
+    </p>
+
+    <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, creador del Web Almanac</em></p>
+{% endblock %}
+
+{% block appendix %}Apéndice{% endblock %}
+
+{% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
 
 {% 
     set localizedPartTitles = {
