--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -14,6 +14,10 @@
 
 {% block organization %}Web Almanac par HTTP Archive{% endblock %}
 
+{% block mission %}
+Notre mission est de combiner les statistiques brutes et les tendances de HTTP Archive avec l’expertise de la communauté web. Le Web Almanac est un rapport complet sur l’état du Web, soutenu par des données réelles et des experts du Web. Il est composé de 20 chapitres couvrant l’expérience utilisateur, le contenu des pages, leur publication et leur distribution.
+{% endblock %}
+
 {% block http_archive_link %}HTTP Archive home{% endblock %}
 
 {% block page_navigation %}Page navigation{% endblock %}
@@ -46,6 +50,16 @@
 {% block open %}Ouvrez{% endblock %}
 {% block close %}Fermez{% endblock %}
 
+{% block written_by_before %}Écrit par{% endblock %}
+{% block reviewed_by_before %}Relu par{% endblock %}
+{% block translated_by_before %}Traduit par{% endblock %}
+{% block written_by_after %}{% endblock %}
+{% block reviewed_by_after %}{% endblock %}
+{% block translated_by_after %}{% endblock %}
+
+{% block author %}Auteur·ice{% endblock %}
+{% block authors %}Auteur·ice·s{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} sur Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} sur GitHub{% endmacro %}
 {% macro website(authorName) %}site web de {{authorName}}{% endmacro %}
@@ -55,6 +69,48 @@
 {% block footer_title %}Navigation dans le pied de page{% endblock %}
 {% block copyright %}© 2019 Web Almanac. Sous licence <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Déclaration d'accessibilité{% endblock %}
+
+{% block contributors_description %}
+Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ self.contributors() }} personnes ont consacré bénévolement d’innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition.
+{% endblock %}
+{% block contributors_link %}Voir les contributeurs et contributrices{% endblock %}
+
+{% block methodology_stat_1_title %}Sites Web testés{% endblock %}
+{% block methodology_stat_1 %}5,8&nbsp;M{% endblock %}
+{% block methodology_stat_2_title %}Données traitées{% endblock %}
+{% block methodology_stat_2 %}20,9&nbsp;TB{% endblock %}
+{% block methodology_description %}
+Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac proviennent du jeu de données HTTP Archive, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de près de 6 millions de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de juillet 2019 a servi de base aux mesures du Web Almanac. Pour plus d’informations, consultez la page Méthodologie.
+{% endblock %}
+{% block methodology_link %}En savoir plus sur la Méthodologie{% endblock %}
+
+{% block introduction %}Introduction{% endblock %}
+
+{% block foreword_title %}Avant-propos{% endblock %}
+
+{% block foreword %}
+    <p>
+      Le Web ouvert est un réseau de technologies étonnamment complexe et évolutif. Des industries et des carrières entières sont bâties sur le Web et dépendent de son écosystème dynamique pour réussir. Aussi crucial que soit le Web, il a été étonnamment difficile de comprendre comment il fonctionne. Depuis 2010, la mission du projet HTTP Archive est de suivre comment le web est construit, et un travail incroyable a été accompli dans ce domaine. Cependant, une lacune s’est révélée particulièrement difficile à combler : donner un sens aux données que le projet HTTP Archive a collectées et permettre à la communauté de comprendre facilement les performances du Web. C’est là qu’intervient le Web Almanac.
+    </p>
+
+    <p>
+      La mission du Web Almanac est de regrouper les trésors d’informations qui, autrement, ne seraient accessibles qu’aux intrépides explorateurs de données, de manière à ce qu’elles soient faciles à comprendre. Nous y sommes parvenu·e·s avec l’aide d’expert·e·s de l’industrie qui comprennent les données et nous informent sur ce qu’elles signifient. Chacun des 20 chapitres du Web Almanac se concentre sur un aspect spécifique du Web, et chacun d’entre eux a été rédigé et révisé par des expert·e·s dans leur domaine. La force du Web Almanac découle directement de l’expertise des personnes qui l’écrivent.
+    </p>
+
+    <p>
+      Un grand nombre de résultats du Web Almanac méritent d’être salués, mais c’est aussi un rappel important du travail qu’il reste à faire pour offrir une expérience utilisateur de grande qualité. Les analyses fondées sur les données présentées dans chaque chapitre sont une forme de responsabilisation que nous partageons tous et toutes pour développer un meilleur Web. Il ne s’agit pas de faire honte à celles et ceux qui se trompent, mais de mettre en lumière le chemin menant aux bonnes pratiques pour qu’il y ait une façon claire et juste de faire les choses. Avec l’aide continue de la communauté Web, nous espérons en faire une tradition annuelle, de sorte que chaque année, nous puissions suivre nos progrès et faire des ajustements de cap si nécessaire.
+    </p>
+
+    <p>
+      Il y a tant à apprendre dans ce rapport&nbsp; Nous vous invitons à l’explorer dès à présent et à partager vos découvertes avec la communauté afin que nous puissions collectivement améliorer notre compréhension de l’état du Web.
+    </p>
+
+    <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, créateur du Web Almanac</em></p>
+{% endblock %}
+
+{% block appendix %}Annexes{% endblock %}
+
+{% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
 
 {% 
   set localizedPartTitles = {
