--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -14,6 +14,10 @@
 
 {% block organization %}HTTP ArchiveによるWeb Almanac{% endblock %}
 
+{% block mission %}
+私たちの使命は、HTTP Archiveの生の統計やトレンドを、ウェブコミュニティの専門知識と組み合わせることです。Web Almanacは、実際のデータと信頼できるウェブの専門家に裏付けられた、ウェブの状態に関する包括的なレポートです。ページコンテンツ、ユーザー体験、パブリッシング、配布などの側面を網羅した20の章で構成されています。
+{% endblock %}
+
 {% block http_archive_link %}HTTP ArchiveによるWeb Almanac{% endblock %}
 
 {% block page_navigation %}ページナビゲーション{% endblock %}
@@ -46,6 +50,16 @@
 {% block open %}開く{% endblock %}
 {% block close %}閉じる{% endblock %}
 
+{% block written_by_before %}{% endblock %}
+{% block reviewed_by_before %}{% endblock %}
+{% block translated_by_before %}{% endblock %}
+{% block written_by_after %}によって書かれた。{% endblock %}
+{% block reviewed_by_after %}によってレビュ。{% endblock %}
+{% block translated_by_after %}によって翻訳された。{% endblock %}
+
+{% block author %}著者{% endblock %}
+{% block authors %}著者{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} on Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} on GitHub{% endmacro %}
 {% macro website(authorName) %}{{authorName}} ウェブサイト{% endmacro %}
@@ -55,6 +69,48 @@
 {% block footer_title %}フッターナビゲーション{% endblock %}
 {% block copyright %}© 2019 Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}アクセシビリティに関する声明{% endblock %}
+
+{% block contributors_description %}
+Web Almanacは、ウェブ・コミュニティの努力によって実現しています。{{ self.contributors() }}人々は、企画、調査、執筆、制作の段階で数え切れないほどの時間をボランティアで費やしてきました。
+{% endblock %}
+{% block contributors_link %}投稿者を見る{% endblock %}
+
+{% block methodology_stat_1_title %}テストしたウェブサイト{% endblock %}
+{% block methodology_stat_1 %}5.8M{% endblock %}
+{% block methodology_stat_2_title %}処理されたデータ{% endblock %}
+{% block methodology_stat_2 %}20.9 TB{% endblock %}
+{% block methodology_description %}
+特に断りのない限り、Web Almanacの20章すべてのメトリクスは、HTTP Archiveのデータセットから取得しています。HTTP Archiveは、2010年以来、ウェブの構築方法を追跡してきたコミュニティが運営するプロジェクトです。WebPageTestとLighthouseをアンダーグラウンドに使用して、約600万のWebサイトに関するメタデータが毎月テストされ、分析のために公開されているBigQueryデータベースに含まれています。2019年7月のデータセットは、Web Almanacのメトリクスの基礎として使用されました。詳細については、方法論のページを参照してください。
+{% endblock %}
+{% block methodology_link %}方法論についてはこちらをご覧ください。{% endblock %}
+
+{% block introduction %}導入{% endblock %}
+
+{% block foreword_title %}序章{% endblock %}
+
+{% block foreword %}
+    <p>
+      オープンウェブは、驚くほど複雑で進化するテクノロジーのネットワークです。あらゆる産業やキャリアはウェブの上に構築されており、成功するためにはウェブの活気あるエコシステムに依存しています。ウェブが非常に重要であるにもかかわらず、ウェブがどのように機能しているかを理解することは、驚くほど難しいものでした。2010年以来、HTTP Archiveプロジェクトの使命は、ウェブがどのように構築されているかを追跡することであり、それは素晴らしい仕事をしてきました。それは、HTTP Archiveプロジェクトが収集してきたデータに意味を持たせ、コミュニティがウェブのパフォーマンスを簡単に理解できるようにすることです。そこでWeb Almanacの出番です。
+    </p>
+
+    <p>
+      Web Almanacの使命は、データを掘り起こす勇気のある人しかアクセスできないような洞察の宝庫を、理解しやすい形でパッケージ化することにあります。これは、データの意味を理解し、それが何を意味するのかを教えてくれる業界の専門家の助けを借りて可能にしたものです。Web Almanacの20の章はそれぞれ、ウェブの特定の側面に焦点を当てており、各章はそれぞれの分野の専門家によって執筆され、レビューを受けています。Web Almanacの強みは、執筆者の専門知識から生まれます。
+    </p>
+
+    <p>
+      Web Almanacに掲載されている調査結果の多くは、賞賛に値するものですが、高品質のユーザー体験を提供するためには、まだまだ必要な作業があることを思い出させてくれる重要なものでもあります。各章のデータに基づいた分析は、より良いWebを開発するために私たちが共有している説明責任の一形態です。それは、間違ったやり方をしている人たちを非難することではなく、ベストプラクティスの道筋に光を当てることで、明確で正しいやり方があることを示しています。ウェブコミュニティの継続的な支援を得て、これを毎年の恒例行事にしたいと考えています。
+    </p>
+
+    <p>
+      このレポートには学ぶべきことがたくさんありますので、あなたが得たものをコミュニティで共有することで、ウェブの状態についての理解を深めることができます。
+    </p>
+
+    <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>、Web Almanacの作成者。</em></p>
+{% endblock %}
+
+{% block appendix %}Appendix{% endblock %}
+
+{% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
 
 {% 
   set localizedPartTitles = {
