Stop links opening in a new tab (#827)

--- a/src/templates/base/2019/base_ebook.html
+++ b/src/templates/base/2019/base_ebook.html
@@ -155,7 +155,7 @@
           </a>
           {% endif %}
           {% if contributor.website %}
-          <a href="{{ contributor.website }}" target="_blank" aria-label="{{ website(contributor.name) }}">
+          <a href="{{ contributor.website }}" aria-label="{{ website(contributor.name) }}">
             <img class="social-icon" src="/static/images/blog.png" alt="{{ website(contributor.name) }}" height="20" width="20" />
           </a>
           {% endif %}
