--- a/src/templates/base/2019/contributors.html
+++ b/src/templates/base/2019/contributors.html
@@ -280,21 +280,21 @@
 
         <div class="contributor-social">
           {% if contributor.twitter %}
-          <a href="https://twitter.com/{{ contributor.twitter }}" target="_blank" aria-label="{{ onTwitter(contributor.twitter) }}">
+          <a href="https://twitter.com/{{ contributor.twitter }}" aria-label="{{ onTwitter(contributor.twitter) }}">
             <svg width="18" height="18">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
             </svg>
           </a>
           {% endif %}
           {% if contributor.github %}
-          <a href="https://github.com/{{ contributor.github }}" target="_blank" aria-label="{{ onGitHub(contributor.github) }}">
+          <a href="https://github.com/{{ contributor.github }}" aria-label="{{ onGitHub(contributor.github) }}">
             <svg width="18" height="18">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
             </svg>
           </a>
           {% endif %}
           {% if contributor.website %}
-          <a href="{{ contributor.website }}" target="_blank" aria-label="{{ website(contributor.name) }}">
+          <a href="{{ contributor.website }}" aria-label="{{ website(contributor.name) }}">
             <svg width="18" height="18">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
             </svg>
