Translation of base.html to Japanese (#829)
* Translation of base.html to Japanese

* fixed review

--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -108,9 +108,9 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
     <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>、Web Almanacの作成者。</em></p>
 {% endblock %}
 
-{% block appendix %}Appendix{% endblock %}
+{% block appendix %}付属資料{% endblock %}
 
-{% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
+{% block ebook_download %} {{ year }} Web AlmanacのPDFファイルをダウンロードする{% endblock %}
 
 {% 
   set localizedPartTitles = {
