--- a/src/templates/ja/2019/base_ebook.html
+++ b/src/templates/ja/2019/base_ebook.html
@@ -10,8 +10,8 @@
 
 {% block about_title %}Web Alamancについて{% endblock %}
 
-{% block description %}Ebook version of the {{ year }} Web Almanac{% endblock %}
+{% block description %}{{ year }} Web Almanacの電子書籍版{% endblock %}
 
-{% block twitter_image_alt %}The {{ year }} Web Almanac{% endblock %}
+{% block twitter_image_alt %}{{ year }} Web Almanac{% endblock %}
 
-{% block breadcrumb_name_2 %}The Web Almanac {{ year }} EBook{% endblock %}
+{% block breadcrumb_name_2 %}Web Almanac {{ year }} 電子書籍{% endblock %}
