More table and figure markup cleanup (#834)
* Fix <table> markup

* Fix typos

* Table and fig cleanups

--- a/src/templates/en/2019/ebook.html
+++ b/src/templates/en/2019/ebook.html
@@ -1496,8 +1496,8 @@
             <thead>
               <tr>
                 <th>Format</th>
-                <th>Highlights</th>
-                <th>Drawbacks</th>
+                <th style="width: 45%">Highlights</th>
+                <th style="width: 45%">Drawbacks</th>
               </tr>
             </thead>
             <tbody>
@@ -3397,7 +3397,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="colgroup" colspan="2">Client</th>
               </tr>
               <tr>
@@ -3805,7 +3805,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="colgroup" colspan="2">No. of Home Pages</th>
                 <th scope="colgroup" colspan="2">% of Home Pages</th>
               </tr>
@@ -5267,7 +5267,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">Mobile</th>
                 <th scope="col">Desktop</th>
               </tr>
@@ -5653,7 +5653,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="colgroup" colspan="2">Mobile</th>
                 <th scope="colgroup" colspan="2">Desktop</th>
               </tr>
@@ -6565,7 +6565,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="colgroup" colspan="2">Percent of Requests</th>
                 <th scope="colgroup" colspan="2">Requests</th>
               </tr>
@@ -6722,7 +6722,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="colgroup" colspan="2">Desktop</th>
                 <th scope="colgroup" colspan="2">Mobile</th>
               </tr>
@@ -6953,11 +6953,11 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="colgroup" colspan="5">Desktop Cache TTL Percentiles (Hours)</th>
               </tr>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">10</th>
                 <th scope="col">25</th>
                 <th scope="col">50</th>
@@ -7355,7 +7355,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">Does Not Use Server Worker</th>
                 <th scope="col">Uses Service Worker</th>
                 <th scope="col">Total</th>
@@ -7393,8 +7393,8 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
-                <td scope="col"></td>
+                <td></td>
+                <td></td>
                 <th scope="col">Does Not Use Service Worker</th>
                 <th scope="col">Uses Service Worker</th>
               </tr>
@@ -7579,7 +7579,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">HTML CDN Usage (%)</th>
               </tr>
             </thead>
@@ -7704,7 +7704,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">Sub-Domain CDN Usage (%)</th>
               </tr>
             </thead>
@@ -7829,7 +7829,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">Third-Party CDN Usage (%)</th>
               </tr>
             </thead>
@@ -7967,7 +7967,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">p10</th>
                 <th scope="col">p25</th>
                 <th scope="col">p50</th>
@@ -8158,7 +8158,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">p10</th>
                 <th scope="col">p25</th>
                 <th scope="col">p50</th>
@@ -8330,7 +8330,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">p10</th>
                 <th scope="col">p25</th>
                 <th scope="col">p50</th>
@@ -8556,7 +8556,7 @@
           <table>
             <thead>
               <tr>
-                <td scope="col"></td>
+                <td></td>
                 <th scope="col">HTTP/0.9</th>
                 <th scope="col">HTTP/1.0</th>
                 <th scope="col">HTTP/1.1</th>
