Video print fallbacks plus other Mobile Web chapter fixes (#837)
* Add print fallbacks for video embeds

* Japanese alt text

* Bug fixes from French review

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -387,6 +387,14 @@ figure .fig-desktop {
   display: block;
 }
 
+.video-embed {
+  display: block;
+}
+
+.video-fallback-image {
+  display: none;
+}
+
 .bio {
   margin-top: 10px;
 }
