Switch eBook PDF generation from WeasyPrint to Prince (#833)
* Move to EJS templates for consistency and to fix missing author pictures

* Add Prince Support (inc fixing figure aria labels)

* Add YouTube fallback

* Fix table in Japanese chapter

* move from WeasyPrint to Prince

* Update README.md

* Remove unnecessary change

* Update statement for PDF accessibility

* Regen PDFs

* Fix typos

* Fix spacing

* Review feedback

* Review feedback

* Review feedback

* Misc fixes

* Make contributors line up

* Fix text wrapping issue in Methodology section

* Prince supports SVG social media icons

* Add print support in case we ever want to print a physical copy

* Remove link underlines in print mode

* Add footnotes and left/right pages

* Fix typos

* templates/base/2019/base_ebook.html

* Avoid hanging headers

* Review feedback

--- a/src/templates/base/2019/table_of_contents.html
+++ b/src/templates/base/2019/table_of_contents.html
@@ -110,7 +110,7 @@
         </section>
       {% endfor %}
       <section class="part">
-        <h2 class="part-name">{{ self.appendix() }}</h2>
+        <h2 class="part-name">{{ self.appendices() }}</h2>
         <div class="chapters">
           <div class="chapter">
             <a href="{{ url_for('methodology', year=year, lang=lang) }}">{{ self.methodology_title() }}</a>
@@ -124,7 +124,10 @@
 
     <div id="ebook-download">
       {% if ebook_exists(lang, year) %}
-      <p><a href="/static/pdfs/web_almanac_{{ year }}_{{ lang }}.pdf">{{ self.ebook_download() }}</a></p>
+      <p>
+        <a href="/static/pdfs/web_almanac_{{ year }}_{{ lang }}.pdf">{{ self.ebook_download() }}</a><br>
+        <small>{{ self.ebook_download_note() }}</small>
+      </p>
       {% endif %}
     </div>
 
