--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -109,8 +109,10 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
 {% endblock %}
 
 {% block appendix %}付属資料{% endblock %}
+{% block appendices %}付属資料{% endblock %}
 
 {% block ebook_download %} {{ year }} Web AlmanacのPDFファイルをダウンロードする{% endblock %}
+{% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
 {% 
   set localizedPartTitles = {
