--- a/src/templates/ar/2019/base.html
+++ b/src/templates/ar/2019/base.html
@@ -112,9 +112,11 @@ Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac
     <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, creator of the Web Almanac</em></p>
 {% endblock %}
 
-{% block appendix %}Appendices{% endblock %}
+{% block appendix %}Appendix{% endblock %}
+{% block appendices %}Appendices{% endblock %}
 
-{% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
+{% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format (generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
+{% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
 {% 
   set localizedPartTitles = {
