--- a/src/templates/base/2019/base_chapter.html
+++ b/src/templates/base/2019/base_chapter.html
@@ -110,7 +110,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 
 {% macro render_authors() %}
   {% for author in metadata.get('authors') %}
-  {% if loop.index == 1 %}
+    {% if loop.index == 1 %}
     <h2 id="authors">
       <a href="#authors" class="anchor-link">
       {% if loop.length == 1 %}{{ self.author() }}{% endif -%}
@@ -120,7 +120,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
     <ul>
     {% endif %}
       {% set authordata = config.contributors[author] if author in config.contributors else None %}
-    {% if authordata %}
+      {% if authordata %}
       <li>
           <div aria-hidden="true">
             <a href="{{ url_for('contributors', year=year, lang=lang, _anchor=author) }}" tabindex="-1">
@@ -132,25 +132,25 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
               {% if authordata.twitter or authordata.github %}
                   <span class="social">
                   {% if authordata.twitter %}
-                  <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}" aria-labelledby="author_{{ author }}_twitter">
+                  <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}" aria-labelledby="author-{{ author }}-twitter">
                     <svg width="18" height="18" role="img">
-                      <title id="author_{{ author }}_twitter">{{ onTwitter(authordata.twitter) }}</title>
+                      <title id="author-{{ author }}-twitter">{{ onTwitter(authordata.twitter) }}</title>
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
                     </svg>
                   </a>
                   {% endif %}
                   {% if authordata.github %}
-                  <a class="github" href="https://github.com/{{ authordata.github }}" aria-labelledby="author_{{ author }}_github">
+                  <a class="github" href="https://github.com/{{ authordata.github }}" aria-labelledby="author-{{ author }}-github">
                     <svg width="18" height="18" role="img">
-                      <title id="author_{{ author }}_github">{{ onGitHub(authordata.github) }}</title>
+                      <title id="author-{{ author }}-github">{{ onGitHub(authordata.github) }}</title>
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
                     </svg>
                   </a>
                   {% endif %}
                   {% if authordata.website %}
-                  <a class="website" href="{{ authordata.website }}" aria-labelledby="author_{{ author }}_website">
+                  <a class="website" href="{{ authordata.website }}" aria-labelledby="author-{{ author }}-website">
                     <svg width="18" height="18" role="img">
-                      <title id="author_{{ author }}_website">{{ website(authordata.name) }}</title>
+                      <title id="author-{{ author }}-website">{{ website(authordata.name) }}</title>
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
                     </svg>
                   </a>
