--- a/src/templates/base/2019/base_ebook.html
+++ b/src/templates/base/2019/base_ebook.html
@@ -9,6 +9,11 @@
 {% block head %}
 {{ super() }}
 <meta name="robots" content="noindex">
+<!--Prince meta date-->
+<meta name="subject" content="{{ self.description() }}">
+<meta name="date" content="{{ self.date_modified()[:-5] }}">
+<meta name="author" content="https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang) }}">
+<meta name="keywords" content="Web Almanac 2019 HTTPArchive {{ ' '.join(localizedChapterTitles.values()) }}">
 {% endblock %}
 
 {% block styles %}
@@ -17,146 +22,201 @@
 <link rel="stylesheet" href="/static/css/ebook.css?v=1" />
 
 <style>
-@page {
-
-  @bottom-left {
-    content: "{{ year }} {{ self.organization() }}";
+/* Add a print query param to format the book for printer (mirror headers and footers) */
+/* Do this as an inline-style, rather than with JavaScript in case PDF generator doesn't execute JavaScript */
+{% if request.args.get('print') == None %}
+  @page {
+    @top-left { content: ''; }
+    @top-right { content: string(chapter-subtitle) string(chapter-title); }
+    @bottom-left { content: "{{ year }} {{ self.organization() }}"; }
+    @bottom-right { content: counter(page); }
   }
-}
+{% else %}
+
+  @page {
+    @footnote {
+      float: bottom;
+      border-top: .25pt solid #666;
+      margin-top: 10px;
+      padding: 5px 0;
+    }
+  }
+  @page :left {
+    @top-left { content: string(chapter-subtitle) string(chapter-title); }
+    @top-right { content: ''; }
+    @bottom-left { content: counter(page); }
+    @bottom-right { content: "{{ year }} {{ self.organization() }}"; }
+    {% if request.args.get('inside-margin') != None %}
+    margin-right: {{ request.args.get('inside-margin') }};
+    {% endif %}
+  }
+
+  @page :right {
+    @top-left { content: ''; }
+    @top-right { content: string(chapter-subtitle) string(chapter-title); }
+    @bottom-left { content: "{{ year }} {{ self.organization() }}"; }
+    @bottom-right { content: counter(page); }
+    {% if request.args.get('inside-margin') != None %}
+    margin-left: {{ request.args.get('inside-margin') }};
+    {% endif %}
+  }
+
+  @page front-matter:left {
+    @bottom-left { content: counter(page, lower-roman); }
+  }
+
+  @page front-matter:right {
+    @bottom-right { content: counter(page, lower-roman); }
+  }
+
+  #toc .front-matter::after {
+    content: leader('.') target-counter(attr(href), page, lower-roman);
+  }
+
+  /* ensure chapters start on right hand side page */
+  #toc, .chapter {
+    break-before: right;
+  }
+
+  /* Front matter are on roman numeral pages (i,ii...etc.), so reset chapters to be on page numbers */
+  #toc, #chapter-1 {
+    counter-reset: page 1;
+  }
+
+  a {
+    text-decoration: none !important;
+
+  }
+
+  figure, p, ul {
+    prince-footnote-policy: keep-with-line;
+  }
+
+{% endif %}
+
+{% if request.args.get('page-size') != None %}
+  @page { size: {{ request.args.get('page-size') }}; }
+{% endif %}
+
 </style>
 {% endblock %}
 
 {% block content %}
-<section class="content">
+<div class="content">
 
-  <section id="title">
-      <h1 class="title title-center">{{ self.intro_title() }}</h1>
-      <h2 class="title title-center">{{ self.intro_sub_title() }}</h2>
-
-      <img class="intro-image" src="/static/images/home-hero.png" alt="" width="984" height="354" loading="lazy" />
-    </section>
-
-    <section>
-      <h1>{{ self.about_title() }}</h1>
-
-      {{ self.mission() }}
-
-      <div class="contributors">
-        <h2 class="title">{{ self.contributors_title() }}</h2>
-        <p>{{ self.contributors_description() }}
-          <a href="#contributors" class="alt">
-            {{ self.contributors_link() }}
-          </a>
-        </p>
-      </div>
-
-      <div class="methodology">
-        <h2 class="title">{{ self.methodology_title() }}</h2>
-        <p class="methodology-info">
-          {{ self.methodology_description() }}
-          <a href="#methodology" class="alt">
-            {{ self.methodology_link() }}
-          </a>
-        </p>
-        <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" width="984" height="354" loading="lazy" />
-      </div>
-    </section>
-
-    <section id="toc" class="contents-wrapper">
-      <h1>{{ self.table_of_contents_title() }}</h1>
-      <div class="parts">
-        <section class="part">
-          <h2 class="part-name">{{ self.introduction() }}</h2>
-          <div class="chapters">
-            <div class="chapter">
-              <a href="#foreword">{{ self.foreword_title() }}</a>
-            </div>
-          </div>
-        </section>
-        {% for part_config in config.outline %}
-          <section class="part">
-            <h2 class="part-name">{{ self.part() }} {{ localizedPartTitles[part_config.part] if localizedPartTitles[part_config.part]|length else chapter_config.title }}</h2>
-            <div class="chapters">
-              {% for chapter_config in part_config.chapters %}
-                <div class="chapter">
-                  {% if chapter_config.todo %}
-                  <span class="todo">{{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}</span>
-                  {% else %}
-                    {% if chapter_lang_exists(lang, year, chapter_config.slug) %}
-                    <a href="#{{ chapter_config.chapter }}">
-                      {{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}
-                    </a>
-                    {% else %}
-                    <a href="#{{ chapter_config.chapter }}">
-                      {{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }} <span class="not-translated">({{ self.translation_not_available() }})</span>
-                    </a>
-                    {% endif %}
-                  {% endif %}
-                  </div>
-              {% endfor %}
-            </div>
-          </section>
-        {% endfor %}
-        <section class="part">
-          <h2 class="part-name">{{ self.appendix() }}</h2>
-          <div class="chapters">
-            <div class="chapter">
-              <a href="#methodology">{{ self.methodology_title() }}</a>
-            </div>
-            <div class="chapter">
-              <a href="#contributors">{{ self.contributors_title() }}</a>
-            </div>
-          </div>
-        </section>
-      </section>
-
-      <section id="foreword">
-        <h1>{{ self.foreword_title() }}</h1>
-        {{ self.foreword() | replace('/%s/%s/contributors#' % (lang, year), '#contributors-') }}
-      </section>
-
-    {{ self.chapters() }}
-
-    <section class="chapter" id="methodology">
-      <div class="subtitle">Appendix A</div>
-      {{ get_ebook_methodology(lang,year) | safe }}
-    </section>
-
-    <section class="chapter" id="contributors">
-      <div class="subtitle">Appendix B</div>
+  <section id="title" class="no-header-or-footer">
     
-        <h1 class="title title-lg">
-          {{ self.contributors_title() }}
-        </h1>
-        <div class="team">
-            <img src="/static/images/avatars/1.jpg" alt="" height="100" width="100" loading="lazy" />
-            <img src="/static/images/avatars/8.jpg" alt="" height="100" width="100" loading="lazy" />
-            <img src="/static/images/avatars/4.jpg" alt="" height="100" width="100" loading="lazy" />
-            <img src="/static/images/avatars/0.jpg" alt="" height="100" width="100" loading="lazy" />
-            <img src="/static/images/avatars/11.jpg" alt="" height="100" width="100" loading="lazy" />
-            <img src="/static/images/avatars/9.jpg" alt="" height="100" width="100" loading="lazy" />
+    <h1 class="title title-center">{{ self.intro_title() }}</h1>
+    <h2 class="title title-center">{{ self.intro_sub_title() }}</h2>
+
+    <img class="intro-image" src="/static/images/home-hero.png" alt="" width="984" height="354" />
+  </section>
+
+  <section id="toc" class="contents-wrapper">
+    <h1>{{ self.table_of_contents_title() }}</h1>
+    <div class="parts">
+      <div class="part">
+        <h2 class="part-name">{{ self.introduction() }}</h2>
+        <div class="toc-chapters">
+          <div class="toc-chapter">
+            <a class="front-matter" href="#foreword">{{ self.foreword_title() }}</a>
+          </div>
         </div>
-        <p>{{ self.contributors_description() }}</p>
-        <ul class="contributors">
-        {% for id, contributor in config.contributors.items() %}
-        <li class="contributor" id="contributors-{{ id }}">
-          <img class="contributor-avatar" src="{{contributor.avatar_url}}" height="100" width="100" alt="{{ contributor.name }} avatar" />
-          <div>
+      </div>
+      {% for part_config in config.outline %}
+      <div class="part">
+        <h2 class="part-name">{{ self.part() }} {{ localizedPartTitles[part_config.part] if localizedPartTitles[part_config.part]|length else chapter_config.title }}</h2>
+        <div class="toc-chapters">
+          {% for chapter_config in part_config.chapters %}
+            <div class="toc-chapter">
+              {% if chapter_config.todo %}
+              <span class="todo">{{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}</span>
+              {% else %}
+                {% if chapter_lang_exists(lang, year, chapter_config.slug) %}
+                <a href="#chapter-{{ chapter_config.chapter }}">
+                  {{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}
+                </a>
+                {% else %}
+                <a href="#chapter-{{ chapter_config.chapter }}">
+                  {{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }} <span class="not-translated">({{ self.translation_not_available() }})</span>
+                </a>
+                {% endif %}
+              {% endif %}
+              </div>
+          {% endfor %}
+        </div>
+      </div>
+      {% endfor %}
+      <div class="part">
+        <h2 class="part-name">{{ self.appendices() }}</h2>
+        <div class="toc-chapters">
+          <div class="toc-chapter">
+            <a href="#methodology">{{ self.methodology_title() }}</a>
+          </div>
+          <div class="toc-chapter">
+            <a href="#contributors">{{ self.contributors_title() }}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="foreword">
+    <h1>{{ self.foreword_title() }}</h1>
+    {{ self.foreword() | replace('/%s/%s/contributors#' % (lang, year), '#contributors-') }}
+  </section>
+
+  {{ self.chapters() }}
+
+  <section class="chapter" id="methodology">
+    <div class="subtitle">{{ self.appendix() }} A</div>
+    {{ get_ebook_methodology(lang,year) | safe }}
+  </section>
+
+  <section class="chapter" id="contributors">
+    <div class="subtitle">{{ self.appendix() }} B</div>
+  
+    <h1 class="title title-lg">
+      {{ self.contributors_title() }}
+    </h1>
+    <div class="team">
+        <img src="/static/images/avatars/1.jpg" alt="" height="100" width="100" />
+        <img src="/static/images/avatars/8.jpg" alt="" height="100" width="100" />
+        <img src="/static/images/avatars/4.jpg" alt="" height="100" width="100" />
+        <img src="/static/images/avatars/0.jpg" alt="" height="100" width="100" />
+        <img src="/static/images/avatars/11.jpg" alt="" height="100" width="100" />
+        <img src="/static/images/avatars/9.jpg" alt="" height="100" width="100" />
+    </div>
+    <p>{{ self.contributors_description() }}</p>
+    <ul class="contributors">
+    {% for id, contributor in config.contributors.items() %}
+      <li class="contributor" id="contributors-{{ id }}">
+        <img class="contributor-avatar" src="{{contributor.avatar_url}}" height="100" width="100" alt="{{ contributor.name }} avatar" />
+        <div>
           <span class="contributor-name">{{ contributor.name }}</span>
           <span class="contributor-social">
           {% if contributor.twitter %}
-            <a href="https://twitter.com/{{ contributor.twitter }}>
-              <img class="social-icon" src="/static/images/twitter.png" alt="{{ onTwitter(contributor.twitter) }}" height="20" width="20" />
+            <a href="https://twitter.com/{{ contributor.twitter }}" aria-labelledby="contributors-{{ id }}-twitter">
+              <svg width="15" height="15" role="img">
+                <title id="contributors-{{ id }}-twitter">{{ onTwitter(contributor.twitter) }}</title>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+              </svg>
             </a>
           {% endif %}
           {% if contributor.github %}
-          <a href="https://github.com/{{ contributor.github }}">
-            <img class="social-icon" src="/static/images/github.png" alt="{{ onGitHub(contributor.github) }}" height="20" width="20" />
+          <a href="https://github.com/{{ contributor.github }}" aria-labelledby="contributors-{{ id }}-github">
+            <svg width="15" height="15" role="img">
+              <title id="contributors-{{ id }}-github">{{ onGitHub(contributor.github) }}</title>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+            </svg>
           </a>
           {% endif %}
           {% if contributor.website %}
-          <a href="{{ contributor.website }}" aria-label="{{ website(contributor.name) }}">
-            <img class="social-icon" src="/static/images/blog.png" alt="{{ website(contributor.name) }}" height="20" width="20" />
+          <a href="{{ contributor.website }}" aria-labelledby="contributors-{{ id }}-website">
+            <svg width="15" height="15" role="img">
+              <title id="contributors-{{ id }}-website">{{ website(contributor.name) }}</title>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
+            </svg>
           </a>
           {% endif %}
         </span>
@@ -167,11 +227,11 @@
             {% endfor %}
           </span>
         </div>
-        </li>
-        {% endfor %}
-        </ul>
-    </section>
+      </li>
+    {% endfor %}
+    </ul>
+  </section>
 
-</section>
+</div>
 
 {% endblock %} 
