--- a/src/templates/base/2019/ebook.ejs.html
+++ b/src/templates/base/2019/ebook.ejs.html
@@ -6,108 +6,115 @@
 
     <% for (let part of ebook.parts) { %>
     <% for (let chapter of part.chapters) { %>
-    <section class="chapter" id="<%= chapter.metadata.chapter %>">
-        <section class="body">
-        <div class="subtitle">
-            {{ self.part() }} <%= chapter.metadata.part_number %> {{ self.chapter() }} <%= chapter.metadata.chapter_number %>
-        </div>
-        <h1 id="<%= chapter.metadata.chapter_number %>" class="title title-lg">
-            <%= chapter.metadata.title %>
-        </h1>
         
-        {% set metadata = <%- JSON.stringify(chapter.metadata) %> %}
-        {% set chapter_image_dir = ("/static/images/2019/%s" % metadata.chapter) %}       
+    {% set metadata = <%- JSON.stringify(chapter.metadata) %> %}
+    {% set chapter_image_dir = ("/static/images/2019/%s" % metadata.chapter) %}
+    <section class="chapter" id="chapter-{{ metadata.get('chapter_number') }}">
+        <div class="body" id="{{ metadata.get('chapter') }}">
 
-        <!-- Show large image for large screens and high density screens and use webp when supported -->
-        <picture>
-            <source
-            media="(min-width: 327px)"
-            type="image/webp"
-            srcset="{{ chapter_image_dir }}/hero_lg.webp"
-            />
-            <source
-            media="(min-width: 327px)"
-            type="image/jpeg"
-            srcset="{{ chapter_image_dir }}/hero_lg.jpg"
-            />
-            <source type="image/webp" srcset="{{ chapter_image_dir }}/hero_lg.webp 2x" />
-            <source type="image/jpeg" srcset="{{ chapter_image_dir }}/hero_lg.jpg 2x" />
-            <source type="image/webp" srcset="{{ chapter_image_dir }}/hero_sm.webp" />
-            <source type="image/jpeg" srcset="{{ chapter_image_dir }}/hero_sm.jpg" />
-            <img
-            src="{{ chapter_image_dir }}/hero_lg.jpg"
-            class="content-banner"
-            alt=""
-            loading="eager"
-            />
-        </picture>
+            <div class="subtitle">
+                {{ self.part() }} {{ metadata.get('part_number') }} {{ self.chapter() }} {{ metadata.get('chapter_number') }}
+            </div>
+            <h1 class="title title-lg">
+                {{ metadata.get('title') }}
+                {% if metadata.get('unedited', false) %}
+                <span class="chapter-unedited">{{ self.unedited() }}</span>
+                {% endif %}
+            </h1>
 
-        <% const byline = (prefix, suffix, contributor_type) => { 
-            if (!chapter.metadata[contributor_type] || !chapter.metadata[contributor_type].length || chapter.metadata[contributor_type][0] == '') return;
+            <!-- Show large image for large screens and high density screens and use webp when supported -->
+            <picture>
+                <source media="(min-width: 327px)" type="image/webp" srcset="{{ chapter_image_dir }}/hero_lg.webp" />
+                <source media="(min-width: 327px)" type="image/jpeg" srcset="{{ chapter_image_dir }}/hero_lg.jpg" />
+                <source type="image/webp" srcset="{{ chapter_image_dir }}/hero_lg.webp 2x" />
+                <source type="image/jpeg" srcset="{{ chapter_image_dir }}/hero_lg.jpg 2x" />
+                <source type="image/webp" srcset="{{ chapter_image_dir }}/hero_sm.webp" />
+                <source type="image/jpeg" srcset="{{ chapter_image_dir }}/hero_sm.jpg" />
+                <img src="{{ chapter_image_dir }}/hero_lg.jpg" class="content-banner" alt="" width="866" height="433" />
+            </picture>
 
-            let contributors = chapter.metadata[contributor_type].map(function(x) { return '<a href="#contributors-' + x + '">' + ebook.config.contributors[x].name + '</a>' });
-            let contributors_sentence = contributors.join(', ').replace(/,(?=[^,]*$)/, ', {{ self.and() }}');
+            <div class="byline">{{ self.written_by_before() }}
+                {% for author in metadata.get('authors') %}
+                <a class="author" href="#contributors-{{ author }}">{{ config.contributors[author].name if author in config.contributors else author }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
+                {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
+                {% endfor %}{{ self.written_by_after() }}
+            </div>
+            
+            <div class="byline reviewers">{{ self.reviewed_by_before() }}
+                {% for reviewer in metadata.get('reviewers') %}
+                <a class="reviewer" href="#contributors-{{ reviewer }}">{{ config.contributors[reviewer].name if reviewer in config.contributors else reviewer }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
+                {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
+                {% endfor %}{{ self.reviewed_by_after() }}
+            </div>
+            
+            {% if metadata.get('translators') | length >= 1 %}
+            <div class="byline translators">{{ self.translated_by_before() }}
+                {% for translator in metadata.get('translators') %}
+                <a class="translator" href="#contributors-{{ translator }}">{{ config.contributors[translator].name if translator in config.contributors else translator }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
+                {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
+                {% endfor %}{{ self.translated_by_after() }}
+            </div>
+            {% endif %}
+            <%- chapter.body %>
+        </div>
 
-            return `<div class="byline ${contributor_type}">${prefix} ${contributors_sentence}${suffix}</div>`;
-        } %>
-
-        <%- byline('{{ self.written_by_before() }}', '{{ self.written_by_after() }}', 'authors') %>
-        <%- byline('{{ self.reviewed_by_before() }}', '{{ self.reviewed_by_after() }}', 'reviewers') %>
-        <%- byline('{{ self.translated_by_before() }}', '{{ self.translated_by_after() }}', 'translators') %>
-
-        <%- chapter.body %>
-        </section>
-
-        <section class="authors">
-        <% let authors = chapter.metadata['authors'].map(x => {
-            var authordata = ebook.config.contributors[x];
-            authordata.id=x;
-            return authordata;
-        });
-        %>
-        <h2><%= (authors.length > 1) ? 'Authors' : 'Author' %></h2>
-        <ul>
-            <% for(let authordata of authors) { %>
+        <div class="authors">
+            {% for author in metadata.get('authors') %}
+            {% if loop.index == 1 %}
+            <h2 id="{{ metadata.get('chapter') }}-authors">
+                <a href="#{{ metadata.get('chapter') }}-authors" class="anchor-link">
+                {% if loop.length == 1 %}{{ self.author() }}{% endif -%}
+                {% if loop.length > 1 and loop.index == 1 %}{{ self.authors() }}{% endif %}
+                </a>
+            </h2>
+            <ul>
+            {% endif %}
+                {% set authordata = config.contributors[author] if author in config.contributors else None %}
                 <li>
-                    <a href="#contributors-<%= authordata.id %>"><img class="avatar" alt="<%= authordata.name %> avatar" src="<%= authordata.avatar_url %>" height="200" width="200" loading="lazy" /></a>
+                    <a href="#contributors-{{ author }}"><img class="avatar" alt="{{ authordata.name }} avatar" src="{{ authordata.avatar_url }}" height="200" width="200" /></a>
                     <div class="info">
-                        <a href="#contributors-<%= authordata.id %>"><span class="name"><%= authordata.name %></span></a>
-                        <% if( authordata.twitter || authordata.github) { %>
+                        <a href="#contributors-{{ author }}"><span class="name">{{ authordata.name }}</span></a>
+                        {% if authordata.twitter or authordata.github %}
                             <span class="social">
-                                <% if (authordata.twitter) { %>
-                                <a class="twitter" href="https://twitter.com/<%= authordata.twitter %>">
-                                  <img class="social-icon" src="/static/images/twitter.png" alt="{{ onTwitter('<%= authordata.twitter %>') }}" height="20" width="20">
+                                {% if authordata.twitter %}
+                                <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}" aria-labelledby="{{ metadata.get('chapter') }}-author-{{ author }}-twitter">
+                                    <svg width="18" height="18" role="img">
+                                        <title id="{{ metadata.get('chapter') }}-author-{{ author }}-twitter">{{ onTwitter(authordata.twitter) }}</title>
+                                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                                    </svg>
                                 </a>
-                                <% } %>
-                                <% if (authordata.github) { %>
-                                <a class="github" href="https://github.com/<%= authordata.github %>">
-                                  <svg width="18" height="18" role="img">
-                                    <title id="<%= chapter.metadata.chapter_number %>_author_<%= authordata.id %>_github">{{ onGitHub('<%= authordata.github %>') }}</title>
-                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
-                                  </svg>
-                                  <img class="social-icon" src="/static/images/github.png" alt="{{ onGitHub('<%= authordata.github %>') }}" height="20" width="20">
+                                {% endif %}
+                                {% if authordata.github %}
+                                <a class="github" href="https://github.com/{{ authordata.github }}" aria-labelledby="{{ metadata.get('chapter') }}-author-{{ author }}-github">
+                                    <svg width="18" height="18" role="img">
+                                        <title id="{{ metadata.get('chapter') }}-author-{{ author }}-github">{{ onGitHub(authordata.github) }}</title>
+                                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                                    </svg>
                                 </a>
-                                <% } %>
-                                <% if (authordata.website) { %>
-                                <a class="website" href="<%= authordata.website %>">
-                                  <img class="social-icon" src="/static/images/blog.png" alt="{{ website('<%= authordata.name %>') }}" height="20" width="20">
+                                {% endif %}
+                                {% if authordata.website %}
+                                <a class="website" href="{{ authordata.website }}" aria-labelledby="{{ metadata.get('chapter') }}-author-{{ author }}-website">
+                                    <svg width="18" height="18" role="img">
+                                        <title id="{{ metadata.get('chapter') }}-author-{{ author }}-website">{{ website(authordata.name) }}</title>
+                                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
+                                    </svg>
                                 </a>
-                                <% } %>
+                                {% endif %}
                             </span>
-                        <% } %>
-                        <% if (authordata.tagline) { %>
+                        {% endif %}
+                        {% if authordata.tagline %}
                             <div class="tagline">
-                                <%= authordata.tagline %>
+                                {{ authordata.tagline }}
                             </div>
-                        <% } %>
+                        {% endif %}
                         <div class="bio">
-                            {{ localizedContributors['<%= authordata.id %>'] | safe if localizedContributors['<%= authordata.id %>']|length }}
+                            {{ add_footnote_links(localizedContributors[author] if localizedContributors[author]|length) | safe }}
                         </div>
                     </div>
                 </li>
-            <% } %>
-        </ul>
-        </section>
+            {% endfor %}
+            </ul>
+        </div>
     </section>
     <% } %>
     <% } %>
