--- a/src/templates/en/2019/accessibility_statement.html
+++ b/src/templates/en/2019/accessibility_statement.html
@@ -70,7 +70,11 @@
         <p>
           In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
         </p>
-      
+
+        <p>
+          The <a href="/static/pdfs/web_almanac_{{ year }}_{{ lang }}.pdf">PDF version of the Web Almanac</a> follows PDF accessibility best practices and meets the <a href="https://en.wikipedia.org/wiki/PDF/UA">PDF/UA-1</a> standard.
+        </p>
+
         <h2 id="external-content"><a href="#external-content" class="anchor-link">External content</a></h2>
 
         <p>
@@ -94,15 +98,19 @@
         <p>
           The website is built on well structured, semantic HTML (including <a href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a> where appropriate), enhanced with CSS for styling and limited JavaScript for some interactive components. The website makes use of modern development practices such as CSS Grid, Fetch, and WOFF2 Fonts, which are not supported in older browsers such as IE 11. The website is still fully functional in those browsers but may not be as visually appealing. No extra plugins or libraries should be required to view the website.
         </p>
+        <p>
+          The Web Almanac PDF follows the same accessibility standards as the website and additionally, is a structurally tagged to aid accessibility.
+        </p>
       </section>
       
       <section>
         <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">Assessment Approach</a></h2>
         
         <p>
-          Self-evaluation: the content was evaluated by the Web Almanac team using their own expertise and a number of tools including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>.
+          Self-evaluation: the content was evaluated by the Web Almanac team using their own expertise and a number of tools including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a> The Web Almanac PDF was tested with an Accessibility Scan in Acrobat Reader Pro DC.
         </p>
-      </section>
+  
+</section>
       
       <section>
         <h2 id="feedback"><a href="#feedback" class="anchor-link">Feedback</a></h2>
