--- a/src/templates/en/2019/base_ebook.html
+++ b/src/templates/en/2019/base_ebook.html
@@ -5,8 +5,8 @@
 {% block date_published %}2020-05-10T12:00:00.000Z{% endblock %}
 {% block date_modified %}2020-05-14T00:00:00.000Z{% endblock %}
 
-{% block intro_title %}The Web Almanac {{ year }}{% endblock %}
-{% block intro_sub_title %}HTTP Archive's annual state of the web report{% endblock %}
+{% block intro_title %}<span class="intro-year">{{ year }}</span><br>Web Almanac{% endblock %}
+{% block intro_sub_title %}HTTP Archive's annual<br><b>state of the web</b> report{% endblock %}
 
 {% block about_title %}About The Web Almanac{% endblock %}
 
