--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -109,8 +109,10 @@ A menos que se indique lo contrario, las métricas en los 20 capítulos del Web 
 {% endblock %}
 
 {% block appendix %}Apéndice{% endblock %}
+{% block appendices %}Apéndices{% endblock %}
 
 {% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
+{% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
 {% 
     set localizedPartTitles = {
