--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -108,9 +108,11 @@ Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac prov
     <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, créateur du Web Almanac</em></p>
 {% endblock %}
 
-{% block appendix %}Annexes{% endblock %}
+{% block appendix %}Annexe{% endblock %}
+{% block appendices %}Annexes{% endblock %}
 
 {% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
+{% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
 {% 
   set localizedPartTitles = {
