--- a/src/templates/ja/2019/base_ebook.html
+++ b/src/templates/ja/2019/base_ebook.html
@@ -5,10 +5,10 @@
 {% block date_published %}2020-05-10T12:00:00.000Z{% endblock %}
 {% block date_modified %}2020-05-16T00:00:00.000Z{% endblock %}
 
-{% block intro_title %}{{ year }} Web Almanac{% endblock %}
-{% block intro_sub_title %}HTTP Archiveの年次報告書ウェブの状態レポート{% endblock %}
+{% block intro_title %}<span class="intro-year">{{ year }}</span><br>Web Almanac{% endblock %}
+{% block intro_sub_title %}HTTP Archiveの年次報告書<br><b>ウェブの状態</b>レポート{% endblock %}
 
-{% block about_title %}Web Alamancについて{% endblock %}
+{% block about_title %}Web Almanacについて{% endblock %}
 
 {% block description %}{{ year }} Web Almanacの電子書籍版{% endblock %}
 
