Translation about PDF to Japanese (#859)
* Translation about PDF to Japanese

* Fix review

--- a/src/templates/ja/2019/accessibility_statement.html
+++ b/src/templates/ja/2019/accessibility_statement.html
@@ -70,6 +70,10 @@
         <p>
           また、一部の章では、YouTubeの動画やPDFリンク、他の記事へのリンクなど、WCAG 2.1レベルAAAで要求される厳しい基準を満たさない、自分たちで作成したもの以外のコンテンツをサイト上に掲載しています。外部コンテンツについては、以下の注意事項を参照してください。
         </p>
+
+        <p>
+          The <a href="/static/pdfs/web_almanac_{{ year }}_{{ lang }}.pdf">Web AlmanacのPDF版</a>はPDFアクセシビリティのベストプラクティスに準拠し、<a href="https://en.wikipedia.org/wiki/PDF/UA">PDF/UA-1</a>規格に準拠しています。
+        </p>
       
         <h2 id="external-content"><a href="#external-content" class="anchor-link">外部コンテンツ</a></h2>
 
@@ -94,13 +98,16 @@
         <p>
           このウェブサイトは、<a href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a>を含む、よく構造化されたセマンティックなHTMLに基づいて構築されており、スタイリングにはCSSを使用し、一部のインタラクティブなコンポーネントには限定的なJavaScriptを使用しています。このウェブサイトは、IE 11などの古いブラウザではサポートされていないCSS Grid、Fetch、WOFF2フォントなどの最新の開発手法を利用しています。ウェブサイトはこれらのブラウザではまだ完全に機能していますが、視覚的に魅力的ではないかもしれません。ウェブサイトを表示するために余分なプラグインやライブラリは必要ありません。
         </p>
+        <p>
+          Web Almanac PDFは、Webサイトと同じアクセシビリティ基準に準拠しており、さらにアクセシビリティを支援するために構造的にタグ付けされています。
+        </p>
       </section>
       
       <section>
         <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">評価アプローチ</a></h2>
         
         <p>
-          自己評価：コンテンツの評価は、Web Almanacチームが独自の専門知識と、<a href="https://wave.webaim.org/">WAVEアクセシビリティツール</a>、<a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefoxアクセシビリティインスペクター</a>、<a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chromeプラグイン</a>などの多くのツールを使用して行いました。
+          自己評価：コンテンツの評価は、Web Almanacチームが独自の専門知識と、<a href="https://wave.webaim.org/">WAVEアクセシビリティツール</a>、<a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefoxアクセシビリティインスペクター</a>、<a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chromeプラグイン</a>などの多くのツールを使用して行いました。Web Almanac PDFは、Acrobat Reader Pro DCのアクセシビリティ・スキャンでテストされました。
         </p>
       </section>
       
