--- a/src/templates/ar/2019/base.html
+++ b/src/templates/ar/2019/base.html
@@ -52,6 +52,9 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block open %}Open{% endblock %}
 {% block close %}Close{% endblock %}
 
+{% macro show_description(id) %}Show description of Figure {{ id }}{% endmacro %}
+{% macro hide_description(id) %}Hide description of Figure {{ id }}{% endmacro %}
+
 {% block written_by_before %}Written by{% endblock %}
 {% block reviewed_by_before %}Reviewed by{% endblock %}
 {% block translated_by_before %}Translated by{% endblock %}
