--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -50,6 +50,9 @@ Nuestra misión es combinar las estadísticas y tendencias sin procesar del HTTP
 {% block open %}Abre{% endblock %}
 {% block close %}Cierra{% endblock %}
 
+{% macro show_description(id) %}Mostrar descripción de la Figura {{ id }}{% endmacro %}
+{% macro hide_description(id) %}Ocultar descripción de la Figura {{ id }}{% endmacro %}
+
 {% block written_by_before %}Escrito por{% endblock %}
 {% block reviewed_by_before %}Revisado por{% endblock %}
 {% block translated_by_before %}Traducido por{% endblock %}
