Accessibility statement improvements (#868)
* Add dynamic sidebar and date to Accessibility Statement

* Whitespace fixes

* Add background colour to options (which will be ignored!) to address accessibility fail in Firefox

* Update src/templates/ja/2019/accessibility_statement.html

Co-authored-by: Sakae Kotaro <ksakae1216@gmail.com>

Co-authored-by: Sakae Kotaro <ksakae1216@gmail.com>

--- a/src/templates/en/2019/accessibility_statement.html
+++ b/src/templates/en/2019/accessibility_statement.html
@@ -31,6 +31,9 @@
         <p>
           The Web Almanac is committed to ensuring digital accessibility for all people. We are continually improving the user experience for everyone and applying the relevant accessibility standards.
         </p>
+        <p>
+          This statement was last reviewed on <time datetime="2020-06-02">2nd June 2020</time>.
+        </p>
       </section>
 
       <section>
@@ -109,8 +112,7 @@
         <p>
           Self-evaluation: the content was evaluated by the Web Almanac team using their own expertise and a number of tools including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a> The Web Almanac PDF was tested with an Accessibility Scan in Acrobat Reader Pro DC.
         </p>
-  
-</section>
+      </section>
       
       <section>
         <h2 id="feedback"><a href="#feedback" class="anchor-link">Feedback</a></h2>
