--- a/src/templates/ja/2019/accessibility_statement.html
+++ b/src/templates/ja/2019/accessibility_statement.html
@@ -31,6 +31,9 @@
         <p>
           Web Almanacは、すべての人にデジタル・アクセシビリティを確保することをお約束します。私達は、すべての方のユーザー体験を継続的に改善し、関連するアクセシビリティ基準を適用しています。
         </p>
+        <p>
+          この声明の最終レビューは、<time datetime="2020-06-02">2020年6月2日</time>に行われました。
+        </p>
       </section>
 
       <section>
