--- a/src/templates/base/2019/accessibility_statement.html
+++ b/src/templates/base/2019/accessibility_statement.html
@@ -47,4 +47,5 @@
 {% block scripts %}
 {{ super() }}
 {{ self.index_menu_script() }}
+<script src='/static/js/chapter.js?v=20200527181403' defer></script>
 {% endblock %}
